<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/about"
        app:titleCentered="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/about_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_content"
        android:padding="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_vaibhav"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/img_vaibhav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_text1" />

    <TextView
        android:id="@+id/txt_vaibhav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaibhav_pandey_2100100100188"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_vaibhav"
        app:layout_constraintTop_toTopOf="@id/img_vaibhav"
        app:layout_constraintBottom_toBottomOf="@id/img_vaibhav"
        android:layout_marginHorizontal="10dp"/>

    <ImageView
        android:id="@+id/img_surbhit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/img_surbhit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_vaibhav" />

    <TextView
        android:id="@+id/txt_surbhit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surbhit_srivastava"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_surbhit"
        app:layout_constraintTop_toTopOf="@id/img_surbhit"
        app:layout_constraintBottom_toBottomOf="@id/img_surbhit"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/about_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_surbhit"
        android:text="@string/for_b_tech_5th_sem_mini_project"
        android:padding="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>